# robot-guitar

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  sync_with_rpi.sh
autoguitar/: loudness_detector.py  manual_control.py  midi_sender.py  midi_utils.py  motor.py  pitch_detection.py  pitch_detection_example.py  pitch_detector.py  signal.py  time_sync.py  tuner.py  tuner_strategy.py  virtual_string.py
autoguitar/control/: strummer.py
autoguitar/dashboard/: dash_app.py  event.py  event_storage.py  layout.py
autoguitar/dsp/: audio_input_stream.py  audio_recorder.py  input_stream.py  loudness_detector.py  pitch_detector.py
autoguitar/scripts/: big_motor.py  collect_tuning_data.py  event_sender.py  main.py  manual_control.py  midi_receiver.py  midi_sender.py  motor_server.py  pitch_detection_example.py  play_scale.py  plucking.py  recording.py  strumming.py  tuner_example.py
autoguitar/tuning/: dataset.py  models.py  tuner.py  tuner_strategy.py
data/: frequency_to_steps.jsonl  input_stream_continuous_test.pkl
data/tuning_data_selected/: 2024-12-05_13-29-29-good.jsonl  2025-01-24_15-48-06.jsonl  2025-01-27_18-19-39.jsonl  2025-02-18_15-08-46-limit-100.jsonl  2025-02-18_15-12-07-limit-10.jsonl  2025-02-18_15-16-36-motor-wait.jsonl  2025-02-18_15-25-37-instant.jsonl  2025-02-18_15-34-33-window-3.jsonl
notebooks/: is_input_stream_continuous.ipynb  playground.ipynb  steps-to-hz.ipynb  tuner_model.ipynb  tuner_stability_20250127.ipynb  tuner_tests.ipynb
tests/: test_motor_controller.py  test_virtual_string.py
typings/dash/: __init__.pyi  _callback.pyi  _callback_context.pyi  _configs.pyi  _dash_renderer.pyi  _get_app.pyi  _get_paths.pyi  _grouping.pyi  _jupyter.pyi  _pages.pyi  _patch.pyi  _utils.pyi  _validate.pyi  _watch.pyi  dash.pyi  dependencies.pyi  exceptions.pyi  fingerprint.pyi  resources.pyi  types.pyi
typings/dash/dash_table/: DataTable.pyi  Format.pyi  FormatTemplate.pyi  __init__.pyi  _imports_.pyi
typings/dash/dcc/: Checklist.pyi  Clipboard.pyi  ConfirmDialog.pyi  ConfirmDialogProvider.pyi  DatePickerRange.pyi  DatePickerSingle.pyi  Download.pyi  Dropdown.pyi  Geolocation.pyi  Graph.pyi  Input.pyi  Interval.pyi  Link.pyi  Loading.pyi  Location.pyi  LogoutButton.pyi  Markdown.pyi  RadioItems.pyi  RangeSlider.pyi  Slider.pyi  Store.pyi  Tab.pyi  Tabs.pyi  Textarea.pyi  Tooltip.pyi  Upload.pyi  __init__.pyi  _imports_.pyi  express.pyi
typings/dash/development/: __init__.pyi  _all_keywords.pyi  _collect_nodes.pyi  _py_components_generation.pyi  (+2 more)
typings/mido/: __init__.pyi  frozen.pyi  parser.pyi  ports.pyi  sockets.pyi  syx.pyi  tokenizer.pyi  version.pyi
typings/plotly/: __init__.pyi  basedatatypes.pyi  tools.pyi  version.pyi
(+697 files in other folders)
