[tool.poetry]
name = "autoguitar"
version = "0.1.0"
description = ""
authors = ["Václav Volhejn <vaclav.volhejn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mido = "^1.3.2"
python-rtmidi = "^1.5.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["I"]
