[tool.poetry]
name = "autoguitar"
version = "0.1.0"
description = ""
authors = ["Václav Volhejn <vaclav.volhejn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# My Raspberry Pi 3 has Python 3.11.2
python = "^3.11"
mido = "^1.3.2"
python-rtmidi = "^1.5.8"
numpy = "^1.26.4"
sounddevice = "^0.4.6"
librosa = "^0.10.1"
readchar = "^4.0.6"
click = "^8.1.7"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.4.1"
ipykernel = "^6.29.4"
plotly = "^5.22.0"
pandas = "^2.2.2"
nbformat = "^5.10.4"

[tool.poetry.group.pi]
optional = true

[tool.poetry.group.pi.dependencies]
"RPi.GPIO" = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["I"]

[tool.pyright]
include = ["autoguitar/", "tests/"]
typeCheckingMode = "strict"

# Disabled because otherwise np.ndarray doesn't work as a type
reportMissingTypeArgument = false

# These complain every time Pyright doesn't know a type, even within a function
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownVariableType = false